[package]
name = "rust-algorithm-club"
version = "0.0.1"
edition = '2018'
authors = ["Weihang Lo <me@weihanglo.tw>"]
description = "Learn algorithms and data structures with Rust"
homepage = "https://rust-algo.club"
repository = "https://github.com/weihanglo/rust-algorithm-club"

[dev-dependencies]
rand = "0.7"
